build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit/tests/Regression/GitHub/2591-separate-class-preserve-no-bootstrap.phpt.warn
WARNING:15:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:15:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'by'
WARNING:15:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Sebastian'
WARNING:15:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Bergmann'
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	'.'
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	(
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:21:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'There'
WARNING:21:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'was'
WARNING:21:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	integer '1'
WARNING:21:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'error'
WARNING:23:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
WARNING:24:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Undefined'
WARNING:24:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'index'
WARNING:26:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	\d
WARNING:28:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'ERRORS'
WARNING:28:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	!
WARNING:29:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	\d
WARNING:29:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:29:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:31:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	End of File
